--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="edu.rosehulman.whodoyouknowhere.whodoyouknowhere">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
@@ -16,7 +15,7 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".MainActivity"
-                android:label="@string/app_name"
+                android:label="@string/title_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -27,6 +26,11 @@
         <activity
                 android:name=".LoginActivity"
                 android:label="@string/title_activity_login">
+        </activity>
+        <activity
+                android:name=".EventOrgActivity"
+                android:label="@string/title_activity_event_org"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
