--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="edu.rosehulman.whodoyouknowhere.whodoyouknowhere">
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
             android:allowBackup="true"
@@ -14,8 +10,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".MainActivity"
-                android:label="@string/title_name"
+                android:name=".LoginActivity"
+                android:label="@string/title_activity_login"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -24,8 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".LoginActivity"
-                android:label="@string/title_activity_login">
+                android:name=".MainActivity"
+                android:label="@string/title_name"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".EventOrgActivity"
