--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0' // new
     implementation 'com.google.firebase:firebase-core:16.0.6' // new
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.mindorks.android:placeholderview:1.0.3'
     kapt 'com.mindorks.android:placeholderview-compiler:1.0.3'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'jp.wasabeef:glide-transformations:2.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
